@@ -1,121 +1,56 @@
 package com.example.QuanLyDanCu.service;
 
-import com.example.QuanLyDanCu.dto.request.BienDongRequestDto;
 import com.example.QuanLyDanCu.dto.response.BienDongResponseDto;
 import com.example.QuanLyDanCu.entity.BienDong;
-import com.example.QuanLyDanCu.entity.TaiKhoan;
+import com.example.QuanLyDanCu.enums.BienDongType;
+import com.example.QuanLyDanCu.exception.NotFoundException;
 import com.example.QuanLyDanCu.repository.BienDongRepository;
-import com.example.QuanLyDanCu.repository.TaiKhoanRepository;
-import lombok.RequiredArgsConstructor;
-import org.springframework.security.core.Authentication;
-import org.springframework.stereotype.Service;
-
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.Objects;
-import java.util.stream.Collectors;
+import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Sort;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 @Service
 @RequiredArgsConstructor
 public class BienDongService {
 
     private final BienDongRepository bienDongRepository;
-    private final TaiKhoanRepository taiKhoanRepository;
 
-    // ========== DTO-based methods ==========
-
-    // Lấy tất cả biến động (DTO)
     public List<BienDongResponseDto> getAllDto() {
-        return bienDongRepository.findAll().stream()
+        return bienDongRepository.findAll(Sort.by(Sort.Direction.DESC, "thoiGian"))
+                .stream()
                 .map(this::toResponseDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    // Lấy biến động theo ID (DTO)
     public BienDongResponseDto getByIdDto(Long id) {
-        BienDong bd = bienDongRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Không tìm thấy biến động với id = " + id));
-        return toResponseDto(bd);
+        BienDong entity = bienDongRepository.findById(id)
+            .orElseThrow(() -> new NotFoundException("Không tìm thấy biến động với id = " + id));
+        return toResponseDto(entity);
     }
 
-    // Tạo mới biến động (DTO)
-    public BienDongResponseDto createDto(BienDongRequestDto dto, Authentication auth) {
-        TaiKhoan user = taiKhoanRepository.findByTenDangNhap(auth.getName())
-                .orElseThrow(() -> new RuntimeException("Không tìm thấy user"));
-
-        BienDong bienDong = BienDong.builder()
-                .loai(dto.getLoai())
-                .noiDung(dto.getNoiDung())
-                .thoiGian(dto.getThoiGian() != null ? dto.getThoiGian() : LocalDateTime.now())
-                .hoKhauId(dto.getHoKhauId())
-                .nhanKhauId(dto.getNhanKhauId())
-                .createdAt(LocalDateTime.now())
-                .createdBy(user.getId())
+    @Transactional
+    public BienDong log(BienDongType type, String noiDung, Long hoKhauId, Long nhanKhauId) {
+        BienDong entity = BienDong.builder()
+                .loai(type)
+                .noiDung(noiDung)
+                .thoiGian(LocalDateTime.now())
+                .hoKhauId(hoKhauId)
+                .nhanKhauId(nhanKhauId)
                 .build();
-
-        BienDong saved = bienDongRepository.save(bienDong);
-        return toResponseDto(saved);
+        return bienDongRepository.save(entity);
     }
 
-    // Cập nhật biến động (DTO)
-    public BienDongResponseDto updateDto(Long id, BienDongRequestDto dto, Authentication auth) {
-        BienDong existing = bienDongRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Không tìm thấy biến động với id = " + id));
-
-        boolean changed = false;
-
-        // Kiểm tra và cập nhật loại biến động
-        if (dto.getLoai() != null && !Objects.equals(existing.getLoai(), dto.getLoai())) {
-            existing.setLoai(dto.getLoai());
-            changed = true;
-        }
-
-        // Kiểm tra và cập nhật nội dung
-        if (dto.getNoiDung() != null && !Objects.equals(existing.getNoiDung(), dto.getNoiDung())) {
-            existing.setNoiDung(dto.getNoiDung());
-            changed = true;
-        }
-
-        // Kiểm tra và cập nhật thời gian
-        if (dto.getThoiGian() != null && !Objects.equals(existing.getThoiGian(), dto.getThoiGian())) {
-            existing.setThoiGian(dto.getThoiGian());
-            changed = true;
-        }
-
-        if (!changed) {
-            throw new RuntimeException("Không có gì thay đổi!");
-        }
-
-        // Gán thông tin cập nhật
-        TaiKhoan user = taiKhoanRepository.findByTenDangNhap(auth.getName())
-                .orElseThrow(() -> new RuntimeException("Không tìm thấy user"));
-        existing.setCreatedAt(LocalDateTime.now());  // Thời gian cập nhật
-        existing.setCreatedBy(user.getId());  // Lấy ID người sửa
-
-        BienDong saved = bienDongRepository.save(existing);
-        return toResponseDto(saved);
-    }
-
-    // Mapper: Entity -> Response DTO
-    private BienDongResponseDto toResponseDto(BienDong bd) {
+    private BienDongResponseDto toResponseDto(BienDong entity) {
         return BienDongResponseDto.builder()
-                .id(bd.getId())
-                .loai(bd.getLoai())
-                .noiDung(bd.getNoiDung())
-                .thoiGian(bd.getThoiGian())
-                .hoKhauId(bd.getHoKhauId())
-                .nhanKhauId(bd.getNhanKhauId())
-                .createdBy(bd.getCreatedBy())
-                .createdAt(bd.getCreatedAt())
+                .id(entity.getId())
+                .loai(entity.getLoai() != null ? entity.getLoai().name() : null)
+                .noiDung(entity.getNoiDung())
+                .thoiGian(entity.getThoiGian())
+                .hoKhauId(entity.getHoKhauId())
+                .nhanKhauId(entity.getNhanKhauId())
                 .build();
-    }
-
-    // Xóa biến động
-    public void delete(Long id, Authentication auth) {
-        // Lấy biến động từ cơ sở dữ liệu và xóa
-        BienDong bienDong = bienDongRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Không tìm thấy biến động với id = " + id));
-
-        bienDongRepository.delete(bienDong);  // Xóa biến động khỏi cơ sở dữ liệu
     }
 }
